crates/check_cli/tests/snapshots/main_commands_check/check_stdin_ignores_unknown_file_path.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
function f() {var x=1; return{x}} class Foo {}
```

# Emitted Messages

```block
function f() {var x=1; return{x}} class Foo {}
```
