crates/check_cli/tests/snapshots/main_commands_check/check_stdin_returns_text_if_content_is_not_changed.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
console.log("");

```

# Emitted Messages

```block
console.log("");

```
