crates/check_cli/tests/snapshots/main_commands_check/check_stdin_write_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
import {a as a} from 'mod'; function f() {return{a}} class Foo {}
```

# Emitted Messages

```block
import { a } from "mod";
function f() {
	return { a };
}
class Foo {}

```
