crates/check_cli/tests/snapshots/main_commands_check/check_stdin_write_unsafe_only_organize_imports.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
import zod from 'zod'; import _ from 'lodash'; function f() {return{}} class Foo {}
```

# Emitted Messages

```block
import _ from 'lodash'; 
import zod from 'zod'; function f() {return{}} class Foo {}
```
