crates/check_cli/tests/snapshots/main_commands_check/check_stdin_write_unsafe_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
# Input messages

```block
import zod from 'zod'; import _ from 'lodash'; function f() {var x = 1; return{x}} class Foo {}
```

# Emitted Messages

```block
import _ from "lodash";
import zod from "zod";
function f() {
	var x = 1;
	return { x };
}
class Foo {}

```
