crates/check_cli/tests/snapshots/main_commands_check/dont_applies_organize_imports_for_ignored_file.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "assist": { "enabled": true, "includes": ["**", "!check.js"] },
  "linter": { "enabled": false }
}
```

## `check.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
